# uav_sim

./: CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml  global_costmap_params.yaml
launch/: display.launch  iris_2d_lider.launch  mavros_fpv_cam.launch  mavros_stereo_cam.launch  navigation.launch
models/girder/: arch_asa.stl  girder_asa.stl  girder_maeda.stl  girder_maeda_short.stl  girder_small.stl  girder_small_short.stl  model.sdf
models/iris_2d_lidar/: model.config  model.sdf
rviz/: urdf.rviz
src/node/: multi_offb_node.cpp  odom_publisher.cpp  offb_node.cpp
stl/: girder_mod.stl
urdf/: girder.urdf
worlds/: girder_world.world  world_test2.world
